infra/vpc.tf
resource "aws_vpc" "poc-vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "poc-vpc"
  }
}

resource "aws_subnet" "poc-public-subnet-1" {
  vpc_id                  = aws_vpc.poc-vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "ap-south-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "poc-public-subnet-1"
  }
}

resource "aws_subnet" "poc-public-subnet-2" {
  vpc_id                  = aws_vpc.poc-vpc.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "ap-south-1b"
  map_public_ip_on_launch = true

  tags = {
    Name = "poc-public-subnet-2"
  }
}

resource "aws_internet_gateway" "poc-igw" {
  vpc_id = aws_vpc.poc-vpc.id

  tags = {
    Name = "poc-igw"
  }
}

resource "aws_route_table" "poc-public-route-table" {
  vpc_id = aws_vpc.poc-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.poc-igw.id
  }

  tags = {
    Name = "poc-public-route-table"
  }
}
resource "aws_route_table_association" "poc-public-subnet-1-association" {
  subnet_id      = aws_subnet.poc-public-subnet-1.id
  route_table_id = aws_route_table.poc-public-route-table.id
}

resource "aws_route_table_association" "poc-public-subnet-2-association" {
  subnet_id      = aws_subnet.poc-public-subnet-2.id
  route_table_id = aws_route_table.poc-public-route-table.id
}
